@@ -175,6 +175,7 @@ class sequence(qtstructure_item, qtplugin, sequence_runtime):
 			for item, cond in self.items:
 				if item != item_name:
 					items.append( (item, cond) )
+			self.items = items
 		elif len(self.items) > index and self.items[index][0] == item_name:
 			# We remember the last removed child item, because we will re-use
 			# it's run-if statement if it is re-added.
